--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ img {
 }
 
 .section1_text {
-    padding: 30px;
+    padding: 20px 30px;
 }
 
 .section1_text h1 {
-    font-size: 130px;
+    font-size: 120px;
     letter-spacing: 3px;
     margin: 0;
     font-weight: 400;
@@ -69,11 +69,11 @@ img {
     margin-right: 10px;
 }
 
-.home_btn a{
+.home_btn a {
     color: #fff !important;
 }
 
-.contractor_btn a{
+.contractor_btn a {
     color: #fff;
 }
 
@@ -94,7 +94,7 @@ img {
 
 /* -------------------------homeowner------------------- */
 
-li.nav-item{
+li.nav-item {
     font-weight: 700;
 }
 
@@ -118,7 +118,7 @@ li.nav-item.active::after {
     padding: 0 0 0 45px;
 }
 
-.home_main{
+.home_main {
     background-color: #F6F6F6;
     padding: 60px 0;
     overflow: hidden;
@@ -152,14 +152,15 @@ li.nav-item.active::after {
 }
 
 .head_line2,
-.red_head_line2, .white_head_line {
+.red_head_line2,
+.white_head_line {
     height: 2px;
     background-color: rgb(42, 190, 235);
     width: 10%;
     margin-top: 30px;
 }
 
-.white_head_line{
+.white_head_line {
     background-color: #fff;
 }
 
@@ -170,12 +171,12 @@ li.nav-item.active::after {
     margin-top: 36px;
 }
 
-.home_section2{
+.home_section2 {
     margin-top: 30px;
     padding-left: 30px;
 }
 
-.home_section2 h1{
+.home_section2 h1 {
     font-size: 55px;
     color: #000;
 }
@@ -230,7 +231,7 @@ li.nav-item.active::after {
 }
 
 .estimate_annual {
-    padding: 60px 0 60px 45px;
+    padding: 50px;
     background-color: #F6F6F6;
 }
 
@@ -247,7 +248,7 @@ footer {
     color: #fff;
 }
 
-footer img{
+footer img {
     width: 175px;
     margin-bottom: 15px;
 }
@@ -270,7 +271,7 @@ footer ul li {
 
 /* -------------------------------------------------------- */
 
-.contractor_section1{
+.contractor_section1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -292,7 +293,7 @@ footer ul li {
     background-color: #F6F5F3;
 }
 
-.standOut_div h1{
+.standOut_div h1 {
     font-size: 55px;
     color: #000;
     font-weight: 600;
@@ -303,7 +304,7 @@ footer ul li {
     padding: 55px;
 }
 
-.stand_row img{
+.stand_row img {
     width: 150px;
     margin-bottom: 40px;
 }
@@ -321,7 +322,7 @@ footer ul li {
     width: 80%;
 }
 
-.contractor_section3{
+.contractor_section3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -342,7 +343,7 @@ footer ul li {
 
 /* ----------------------------contact----------------- */
 
-.contact_section1{
+.contact_section1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -365,15 +366,16 @@ footer ul li {
     background-color: #F6F6F6;
 }
 
-.contact_section2 h1{
+.contact_section2 h1 {
     font-size: 50px;
     color: #000;
 }
 
-.contact2_img{
+.contact2_img {
     text-align: center;
 }
-.contact2_img img{
+
+.contact2_img img {
     width: 75%;
 }
 
@@ -403,7 +405,7 @@ footer ul li {
     padding: 80px 45px;
 }
 
-.heat_pump_section img{
+.heat_pump_section img {
     width: 80%;
 }
 
@@ -417,7 +419,8 @@ footer ul li {
     margin: 20px 0;
     padding: 0 50px;
 }
-.air_condition img{
+
+.air_condition img {
     width: 170px;
     margin-bottom: 50px;
 }
@@ -441,22 +444,22 @@ footer ul li {
     margin: 30px 0;
 }
 
-.about_section2{
+.about_section2 {
     background-color: #F6F6F6;
     padding-bottom: 100px;
 }
 
-.stay_connected_div{
-    background-image: linear-gradient(45deg, #0ba1f7 , #926bc9, red);
+.stay_connected_div {
+    background-image: linear-gradient(45deg, #0ba1f7, #926bc9, red);
     padding: 90px;
 }
 
-.stay_connected_div h1{
+.stay_connected_div h1 {
     color: #000;
     font-size: 50px;
 }
 
-.email_div{
+.email_div {
     margin: 100px 0 50px 0;
 }
 
@@ -466,23 +469,34 @@ footer ul li {
     font-weight: 600;
 }
 
-.email_desc h4{
+.email_desc h4 {
     color: #fff;
     font-size: 22px;
 }
 
-.margin_setting1{
+.margin_setting1 {
     margin-top: 2vw !important;
 }
-.margin_setting2{
+
+.margin_setting2 {
     margin-top: 7vw !important;
 }
-.margin_setting3{
+
+.margin_setting3 {
     margin-top: 9vw !important;
 }
 
-.email_section_div{
+.email_section_div {
     display: flex;
+}
+
+.estimate_img_div {
+    text-align: center;
+}
+
+.estimate_img_div img {
+    width: 900px;
+    margin-top: 39px;
 }
 
 @media (max-width: 767px) {
@@ -496,77 +510,107 @@ footer ul li {
         width: 100%;
     }
 
-    .home_btn, .contractor_btn{
-        width: 90%;
+    .home_btn,
+    .contractor_btn {
+        width: 100%;
+        font-size: 17px;
+        font-weight: 600;
     }
 
-    .index_main_section{
+    .index_main_section {
         padding: 20px;
     }
 
     .home_section1 h1 {
         font-size: 32px;
+        font-weight: 600;
+    }
+
+    .head_line {
+        margin-top: 10px;
     }
 
     .home_section1 p {
         font-size: 20px;
     }
 
-    .home_section1{
-        padding: 10px;
+    .home_section1 {
+        padding: 20px;
     }
 
-    .home_section1_btn_div{
+    .home_section1_btn_div {
         text-align: center;
     }
 
-    .home_section2_row{
+    .home_section2_row {
         flex-direction: column-reverse;
     }
 
     .home_section2 h1 {
-        font-size: 42px;
+        font-size: 35px;
+        font-weight: 600;
     }
+
     .home_section2 h5 {
         font-size: 20px;
+        line-height: 35px;
     }
-    
-    .started_btn{
+
+    .started_btn {
         margin: 0;
         margin-bottom: 30px;
         width: 90%;
+        font-weight: 600;
     }
 
-    .process_section h1{
-        font-size: 40px;
+    .process_section h1 {
+        font-size: 35px;
     }
 
-    .head_line2{
+    .head_line2 {
         width: 30%;
+        margin-top: 10px;
     }
-    
-    .process_row{
+
+    .process_section {
+        padding: 20px;
+    }
+
+    .process_row {
         padding: 0;
         text-align: center;
         margin-bottom: 40px;
     }
 
+    .estimate_annual {
+        padding: 50px 20px;
+    }
+
     .estimate_annual h1 {
         font-size: 30px;
+        font-weight: 600;
+    }
+
+    .contractor_section1{
+        padding: 20px;
     }
 
     .contractor_section1 h1 {
-        font-size: 40px;
+        font-size: 32px;
     }
 
-    .contractor_section1 p{
+    .contractor_section1 p {
         font-size: 20px;
     }
 
     .learn_btn {
-        background-color: red;
-        margin-bottom: 30px;
-        width: 90%;
+        width: 100%;
+        font-weight: 600;
+        font-size: 17px;
+    }
+
+    .red_head_line {
+        margin-top: 10px;
     }
 
     .standOut_div h1 {
@@ -579,8 +623,16 @@ footer ul li {
         margin-bottom: 40px;
     }
 
-    .stand_row p{
+    .stand_row p {
         width: 100%;
+    }
+
+    .standOut_div {
+        padding: 20px;
+    }
+    
+    .contractor_section3{
+        padding: 20px;
     }
 
     .contractor_section3 h1 {
@@ -593,33 +645,39 @@ footer ul li {
     }
 
     .contact_section1 h1 {
-        font-size: 40px;
+        font-size: 32px;
         font-weight: 600;
     }
 
-     .contact_section1 {
+    .contact_section1 {
         padding: 20px;
     }
 
     .contact_section1 p {
         font-size: 20px;
     }
-    
-    .purple_learn_btn{
+
+    .purple_head_line{
+        margin: 10px 0 30px 0;
+    }
+
+    .purple_learn_btn {
         width: 100%;
+        font-size: 17px;
     }
 
     .stay_connected_div h1 {
-        font-size: 40px;
+        font-size: 30px;
         font-weight: 600;
     }
 
     .white_head_line {
         width: 30%;
+        margin-top: 10px;
     }
 
     .stay_connected_div {
-        padding: 30px;
+        padding: 20px;
     }
 
     .email_section_div {
@@ -632,7 +690,7 @@ footer ul li {
     .red_head_line2 {
         background-color: red;
         margin-bottom: 30px;
-        margin-top: 36px;
+        margin-top: 10px;
         width: 30%;
     }
 
@@ -644,32 +702,53 @@ footer ul li {
         padding: 20px;
     }
 
+    .contact_section2 h1{
+        font-size: 35px;
+        font-weight: 600;
+    }
+
+    .email_desc h3{
+        font-size: 22px;
+    }
+    .email_desc h4{
+        font-size: 20px;
+    }
+
     .margin_setting1 {
         margin-top: 12vw !important;
     }
 
+    .margin_setting1 h2, .margin_setting2 h2, .margin_setting3 h2 {
+        font-size: 24px;
+    }
+
+    .refrigerant_section {
+        padding: 20px;
+    }
+
     .refrigerant_section h1 {
-        font-size: 35px;
+        font-size: 32px;
         font-weight: 600;
     }
 
     .refrigerant_section p {
         font-size: 20px;
         color: #000;
-        line-height: 2;
+        line-height: 32px;
         padding: 0;
     }
 
     .heat_pump_section h1 {
-        font-size: 40px;
+        font-size: 30px;
     }
 
     .heat_pump_section img {
+        margin-top: 20px;
         width: 100%;
     }
 
     .heat_pump_section {
-        padding: 70px 20px;
+        padding: 40px 20px;
     }
 
     .air_condition {
@@ -686,7 +765,7 @@ footer ul li {
         flex-wrap: wrap;
         justify-content: center;
     }
-    
+
 
     i.fa-solid.fa-bars {
         font-size: 30px;
@@ -694,5 +773,42 @@ footer ul li {
 
     .navbar-collapse {
         padding: 25px 0;
+    }
+
+    li.nav-item.active::after{
+        left: 0;
+    }
+
+    .air_condition p{
+        font-size: 20px;
+    }
+
+    .air_condition img {
+        width: 150px;
+        margin-bottom: 30px;
+    }
+
+    .air_condition h3{
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 1200px) {
+
+    .section1_text h1{
+        font-size: 63px;
+        letter-spacing: 0px;
+    }
+    
+    .section1_text p{
+        font-size: 19px;
+    }
+
+    .home_btn{
+    padding: 5px 25px 5px 25px;
+    margin-top: 15px;
+    font-size: 17px;
+    font-weight: 600;
+    margin-right: 10px;
     }
 }
