--- a/style.css
+++ b/style.css
@@ -28,9 +28,12 @@ img {
 }
 
 .index_main_section {
-    background-image: url('./images/index_home.png');
-    background-size: cover;
+    background-image: url(./images/index_home.png);
+    background-size: contain;
     padding: 0 30px;
+    height: 78vh;
+    background-position: right;
+    background-repeat: no-repeat;
 }
 
 .section1_text {
@@ -38,25 +41,23 @@ img {
 }
 
 .section1_text h1 {
-    font-size: 120px;
-    letter-spacing: 3px;
-    margin: 0;
+    font-size: 16.62049861495845vh;
+    letter-spacing: 0.4155124653739612vh;
+    margin: 0vh;
     font-weight: 400;
-    margin-top: -10px;
+    margin-top: -1.3850415512465375vh;
     background: -webkit-linear-gradient(left, #46a6dd, #987fba, #f15a24);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 .section1_text p {
-    margin: 37px 0 0 0;
-    font-size: 24px;
+    margin: 5.124653739612189vh 0 0 0;
+    font-size: 3.3240997229916895vh;
     width: 85%;
     font-weight: 500;
 }
 
-.home_btn,
-.contractor_btn,
 .learn_btn,
 .purple_learn_btn {
     border: none;
@@ -67,6 +68,18 @@ img {
     margin-top: 15px;
     font-size: 22px;
     margin-right: 10px;
+}
+
+
+.home_btn, .contractor_btn{
+    border: none;
+    background-color: #00bbff;
+    color: #fff;
+    border-radius: 2.770083102493075vh;
+    padding: 0.6925207756232687vh 3.4626038781163433vh 0.6925207756232687vh 3.4626038781163433vh;
+    margin-top: 2.0775623268698062vh;
+    font-size: 3.0470914127423825vh;
+    margin-right: 1.3850415512465375vh;
 }
 
 .home_btn a {
@@ -501,7 +514,7 @@ footer ul li {
 
 @media (max-width: 767px) {
     .section1_text h1 {
-        font-size: 46px;
+        font-size: 46px !important;
         font-weight: 800;
     }
 
@@ -526,9 +539,7 @@ footer ul li {
         font-weight: 600;
     }
 
-    .head_line {
-        margin-top: 10px;
-    }
+    
 
     .home_section1 p {
         font-size: 20px;
@@ -614,7 +625,7 @@ footer ul li {
     }
 
     .standOut_div h1 {
-        font-size: 35px;
+        font-size: 32px;
     }
 
     .stand_row {
@@ -636,7 +647,7 @@ footer ul li {
     }
 
     .contractor_section3 h1 {
-        font-size: 40px;
+        font-size: 32px !important;
         margin-top: 35px;
     }
 
@@ -804,11 +815,108 @@ footer ul li {
         font-size: 19px;
     }
 
-    .home_btn{
+    .home_btn, .contractor_btn{
     padding: 5px 25px 5px 25px;
     margin-top: 15px;
     font-size: 17px;
     font-weight: 600;
     margin-right: 10px;
+    }
+
+    .home_section1 h1, .home_section2 h1, .contractor_section1 h1, .contact_section1 h1, .refrigerant_section h1 {
+        font-size: 30px;
+        font-weight: 600;
+        color: #000;
+    }
+
+    .refrigerant_section {
+        padding: 20px;
+    }
+
+    .refrigerant_section p {
+        font-size: 20px;
+        color: #000;
+        line-height: 30px;
+        padding: 0;
+    }
+
+    .home_section1 p, .home_section2 h5, .contractor_section1 p {
+        font-size: 20px;
+        margin-top: 25px;
+        color: #000;
+        margin-bottom: 0;
+    }
+    
+    .contractor_section1 p{
+        margin-top: 5px;
+    }
+    .contact_section1 p{
+        font-size: 20px;
+    }
+
+    .purple_head_line{
+        margin-top: 10px;
+    }
+
+    .home_section2 h5{
+        line-height: 28px;
+        font-size: 18px !important;
+    }
+
+    .home_section2{
+        margin-top: 0;
+    }
+
+    .index_main_section{
+        background-position: top;
+    }
+
+    .head_line {
+        margin-top: 10px;
+    }
+
+    .process_row h2 {
+        font-size: 18px;
+    }
+
+    .process_row p {
+        font-size: 17px;
+    }
+
+    .estimate_annual h1 {
+        font-size: 40px;
+    }
+
+    .red_head_line{
+        margin-top: 10px;
+    }
+
+    .standOut_div{
+        padding: 20px;
+    }
+    .stand_row {
+        padding: 20px;
+    }
+
+    .contractor_section3{
+        padding: 10px 30px;
+    }
+
+    .contractor_section3 p{
+        font-size: 20px;
+    }
+
+    .contractor_section3 h1 {
+        font-size: 40px;
+        font-weight: 600;
+        color: #000;
+    }
+
+    .stay_connected_div {
+        padding: 20px;
+    }
+
+    .contact2_img img {
+        width: 100%;
     }
 }
