--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 * {
     font-family: 'IBM Plex Sans KR', sans-serif;
+    scroll-behavior: smooth;
 }
 
 .container {
@@ -47,6 +48,7 @@ img {
     font-weight: 400;
     margin-top: -1.3850415512465375vh;
     background: -webkit-linear-gradient(left, #46a6dd, #987fba, #f15a24);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -91,12 +93,13 @@ img {
 }
 
 .contractor_btn {
-    background-color: #ff6200;
+    background-color: #FF5818;
+    text-decoration: none;
 }
 
 
 .learn_btn {
-    background-color: red;
+    background-color: #FF0000;
     margin-bottom: 25px;
 }
 
@@ -179,7 +182,7 @@ li.nav-item.active::after {
 
 .red_head_line,
 .red_head_line2 {
-    background-color: red;
+    background-color: #FF0000;
     margin-bottom: 30px;
     margin-top: 36px;
 }
